--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="container">
   <div class="card">
     <h1>マイクラ コマンド集</h1>
-    <img src="https://media.discordapp.net/attachments/1384051035118506014/1395578702787510443/neon_rogo1_VCMYK.png?ex=691e6f73&is=691d1df3&hm=657aa6574f89c49956eb492d8dded5c94720726892a369bb40abca2445b0c827&=&format=webp&quality=lossless&width=1647&height=856" alt="Minecraft Logo" class="logo">
+    <img src="neon_rogo1_VCMYK.png" alt="Neonロゴ">
     <p>使いたいコマンドのページへ移動してください</p>
 
     <a href="hostile.html" class="button">👿 敵対コマンド</a>
@@ -63,3 +63,4 @@
 
 </body>
 </html>
+
