Fix image path and clean up HTML structure
Updated image source path and fixed HTML formatting.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 <div class="container">
   <div class="card">
     <h1>マイクラ コマンド集</h1>
-    <img src="neon_rogo1_VCMYK.png" alt="Neonロゴ">
+    <img src="images/neon_rogo1_VCMYK.png" alt="Neonロゴ">
+
     <p>使いたいコマンドのページへ移動してください</p>
 
     <a href="hostile.html" class="button">👿 敵対コマンド</a>
@@ -63,4 +64,5 @@
 
 </body>
 </html>
+
 
