Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     background-color: #1976D2;
   }
   img.logo {
-    width: 300px; /* ←★画像サイズ調整 */
+    width: 300px; /* 画像サイズ調整 */
     margin: 10px auto;
     display: block;
   }
@@ -66,3 +66,4 @@
 
 </body>
 </html>
+
