--- a/enemy/index.html
+++ b/enemy/index.html
@@ -53,10 +53,10 @@
 <body>
 
 <div class="navbar">
-  <a href="index.html">⚡特殊コマンド</a>
-  <a href="items.html">🎁アイテム</a>
-  <a href="hostile.html">👿敵対MOB</a>
-  <a href="friendly.html">🐑友好MOB</a>
+  <a href="special/">⚡特殊コマンド</a>
+  <a href="items/">🎁アイテム</a>
+  <a href="enemy/">👿敵対MOB</a>
+  <a href="friendly/">🐑友好MOB</a>
 </div>
 
 <div class="container">
@@ -145,3 +145,4 @@ function copyCommand(){
 
 </body>
 </html>
+
