--- a/index.html
+++ b/index.html
@@ -7,30 +7,39 @@
 <link rel="stylesheet" href="style.css">
 
 <style>
-  /* ▼ 共通ヘッダー ▼ */
+  /* ▼ ヘッダー全体 */
   .header {
     display: flex;
+    justify-content: flex-start;
     align-items: center;
-    gap: 16px;
-    margin: 20px;
+    gap: 25px;
+    padding: 20px;
   }
-  .logo-main { height: 50px; }
-  .logo-small { height: 40px; }
+
+  /* 左端の大きいロゴ */
+  .logo-main {
+    height: 100px; /* ← サイズ変更はここ */
+  }
+
+  /* 右側のメニュー画像（TOP / 特殊 / アイテム…） */
+  .logo-small {
+    height: 60px; /* ← 大きめに調整（変更可） */
+    vertical-align: middle;
+  }
 
   .navbar {
     display: flex;
     align-items: center;
-    gap: 6px;
-  }
-  .navbar a { text-decoration: none; }
-
-  /* ▼ ページ全体 ▼ */
-  body {
-    font-family: "Noto Sans JP", sans-serif;
+    gap: 10px;
   }
 
+  .navbar a {
+    text-decoration: none;
+  }
+
+  /* ▼ メインコンテンツ */
   .container {
-    max-width: 600px;
+    max-width: 650px;
     margin: 40px auto;
     text-align: center;
   }
@@ -60,24 +69,30 @@
 <!-- ▼ ヘッダー（画像メニュー） -->
 <div class="header">
 
-  <!-- 左端 50pxロゴ -->
-  <img src="images/neon_rogo1_VCMYK.png" class="logo-main" alt="ロゴ">
+  <!-- 左端の大きなロゴ → TOPへリンク -->
+  <a href="./">
+    <img src="images/neon_rogo1_VCMYK.png" class="logo-main" alt="TOPロゴ">
+  </a>
 
-  <!-- メニュー（40px画像 ×5） -->
+  <!-- 右側の画像メニュー -->
   <nav class="navbar">
 
     <a href="./">
       <img src="images/TOP textlogo.png" class="logo-small" alt="TOP">
-    </a> ｜
+    </a>
+
     <a href="special/">
       <img src="images/special textlogo.png" class="logo-small" alt="特殊">
-    </a> ｜
+    </a>
+
     <a href="items/">
       <img src="images/item textlogo.png" class="logo-small" alt="アイテム">
-    </a> ｜
+    </a>
+
     <a href="enemy/">
       <img src="images/enemy textlogo.png" class="logo-small" alt="敵対">
-    </a> ｜
+    </a>
+
     <a href="friendly/">
       <img src="images/friendly textlogo.png" class="logo-small" alt="友好">
     </a>
@@ -114,3 +129,4 @@
 
 </body>
 </html>
+
