--- a/index.html
+++ b/index.html
@@ -52,4 +52,98 @@
     display: block;
     width: 80%;
     margin: 12px auto;
-    padd
+    padding: 14px;
+    background: #2196F3;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 8px;
+    font-size: 17px;
+  }
+
+  .menu-button:hover {
+    background: #1976D2;
+  }
+
+  .ste-btn {
+    display: block;
+    width: 70%;
+    margin: 20px auto;
+    padding: 14px;
+    background: #2196F3;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 8px;
+    font-size: 16px;
+  }
+
+</style>
+</head>
+<body>
+
+<!-- ▼ ヘッダー（ロゴ + メニュー画像） -->
+<div class="top-bar">
+
+  <!-- 左端ロゴ（高さ50px） -->
+  <a href="./">
+    <img src="images/neon_rogo_solo.png" class="top-logo" alt="Neonロゴ">
+  </a>
+
+  <a href="./">
+    <img src="images/TOP textlogo.png" class="menu-img" alt="TOP">
+  </a>
+
+  <span class="menu-separator">｜</span>
+
+  <a href="special/">
+    <img src="images/special textlogo.png" class="menu-img" alt="特殊">
+  </a>
+
+  <span class="menu-separator">｜</span>
+
+  <a href="items/">
+    <img src="images/item textlogo.png" class="menu-img" alt="アイテム">
+  </a>
+
+  <span class="menu-separator">｜</span>
+
+  <a href="enemy/">
+    <img src="images/enemy textlogo.png" class="menu-img" alt="敵対">
+  </a>
+
+  <span class="menu-separator">｜</span>
+
+  <a href="friendly/">
+    <img src="images/friendly textlogo.png" class="menu-img" alt="友好">
+  </a>
+
+</div>
+
+<!-- ▼ 中央メインコンテンツ -->
+<div class="container">
+
+  <!-- ★ 消えていたロゴを復活！（高さ120px） -->
+  <img src="images/neon_rogo1_VCMYK.png" alt="Neonロゴ" style="height:120px; margin-bottom:15px;">
+
+  <!-- タイトル画像（200px） -->
+  <img src="images/command list.png" alt="コマンドリスト" style="height:200px; margin-bottom:20px;">
+
+  <p>使いたいコマンドのページへ移動してください</p>
+
+  <a href="enemy/" class="menu-button">敵対コマンド</a>
+  <a href="special/" class="menu-button">特殊コマンド</a>
+  <a href="items/" class="menu-button">アイテムコマンド</a>
+  <a href="friendly/" class="menu-button">友好MOBコマンド</a>
+
+  <p style="margin-top:25px; opacity:0.8;">
+    その他のプラグインコマンドは<br>
+    Stream to Earn のサイトにて確認できます
+  </p>
+
+  <a href="https://streamtoearn.io/" class="ste-btn" target="_blank">
+    Stream to Earn 公式サイト
+  </a>
+
+</div>
+
+</body>
+</html>
