--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     font-family: sans-serif;
   }
 
-  /* 上部ナビ 横並び */
+  /* 上部ナビ 全体横並び */
   .top-nav {
     display: flex;
     align-items: center;
@@ -20,7 +20,7 @@
     padding: 10px 20px 30px 20px;
   }
 
-  /* 左上ロゴ */
+  /* 左上ロゴ（キッシー） */
   .top-nav .left-logo {
     height: 50px;
   }
@@ -59,7 +59,7 @@
 
 <body>
 
-<!-- ナビ全体 1行表示 -->
+<!-- ナビ全体 1行 -->
 <div class="top-nav">
   <a href="./"><img src="images/neon_rogo_solo.png" class="left-logo" alt="ロゴ"></a>
 
@@ -74,8 +74,11 @@
 <div class="container">
   <div class="card">
 
-    
-    <img src="images/command list.png" alt="コマンドリスト" style="height:250px; margin-bottom:20px;">
+    <!-- 中央Neon ロゴ -->
+    <img src="images/neon_rogo1_VCMYK.png" alt="Neonロゴ" style="height:180px; margin-bottom:20px;">
+
+    <!-- 中央Neon ロゴ の下 コマンド一覧 -->
+    <img src="images/command list.png" alt="コマンドリスト" style="height:170px; margin-bottom:20px;">
 
     <p>使いたいコマンドのページへ移動してください</p>
 
