--- a/special/index.html
+++ b/special/index.html
@@ -113,10 +113,12 @@
 <div class="container">
 <div class="card">
 
-  <div class="title-wrap">
-    <img src="../images/1.png" class="title-logo" alt="特殊ロゴ">
-    <h1>特殊コマンド</h1>
-  </div>
+<!-- タイトル（中央揃え & テキストロゴ画像 ） -->
+<div class="title-wrap" style="justify-content:center;">
+  <img src="../images/1.png" class="title-logo" style="height:50px;" alt="特殊アイコン">
+  <img src="../images/special textlogo.png" alt="特殊タイトル" style="height:60px;">
+</div>
+
 
   <label>コマンドを選択：</label>
   <select id="commandSelect">
@@ -182,3 +184,4 @@ function copyCommand(){
 
 </body>
 </html>
+
