--- a/special/index.html
+++ b/special/index.html
@@ -56,7 +56,7 @@
     height: 50px; /* ★ 1.png */
   }
   .title-logo-big {
-    height: 100px; /* ★ special textlogo */
+    height: 180px; /* textlogo */
   }
 
   select {
@@ -186,3 +186,4 @@ function copyCommand(){
 
 </body>
 </html>
+
