--- a/enemy/index.html
+++ b/enemy/index.html
@@ -53,10 +53,10 @@
     margin-bottom: 20px;
   }
   .title-logo-small {
-    height: 50px; /* ★ 敵対アイコン */
+    height: 50px; /* neon_rogo_solo */
   }
   .title-logo-big {
-    height: 100px; /* ★ enemy textlogo.png */
+    height: 180px; /* enemy textlogo */
   }
 
   select, input[type=range] {
@@ -201,3 +201,4 @@ function copyCommand(){
 
 </body>
 </html>
+
