--- a/special/index.html
+++ b/special/index.html
@@ -51,10 +51,10 @@
     justify-content: center;
     gap: 12px;
     margin-bottom: 20px;
-
   }
+
   .title-logo-big {
-    height: 200px; /* textlogo */
+    height: 200px; /* special textlogo */
   }
 
   select {
@@ -114,9 +114,8 @@
 <div class="container">
 <div class="card">
 
-  <!-- ▼ タイトル -->
+  <!-- ▼ タイトル部分（1.png 削除済） -->
   <div class="title-wrap">
-    <img src="../images/1.png" class="title-logo-small" alt="特殊アイコン">
     <img src="../images/special textlogo.png" class="title-logo-big" alt="特殊タイトル">
   </div>
 
@@ -184,5 +183,3 @@ function copyCommand(){
 
 </body>
 </html>
-
-
