--- a/special/index.html
+++ b/special/index.html
@@ -48,7 +48,7 @@
   .title-wrap {
     display: flex;
     justify-content: center;
-    margin-bottom: 13px; /* 余白 */
+    margin-bottom: 7px; 
   }
 
   .title-logo-big {
@@ -182,5 +182,6 @@ function copyCommand(){
 
 </body>
 </html>
+
 
 
